--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Ecosolution - development and implementation of renewable energy sources"
-    />
+    
+    <title>Ecosolution</title>
+
+    <meta property="og:title" content="Ecosolution">
+    <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.svg">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Ecosolution</title>
   </head>
   <body> 
     <div id="root"></div>
- 
   </body>
 </html>
