--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Ecosolution">
     <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.svg">
+    <meta property="og:image" content="file:///c/it/ecosolution/public/image.jpg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
