Updated image in OGP

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
     <meta property="og:image" content="file:///c/it/ecosolution/public/favicon.svg">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   </head>
