--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,17 @@
   </head>
   <body> 
     <div id="root"></div>
+    <script>
+      
+
+      const baseUrl = window.location.origin;
+      console.log('baseUrl: ', baseUrl);
+
+      const imagePath = "%PUBLIC_URL%/favicon192.png"
+      console.log('imagePath: ', imagePath);
+      const imageUrl = baseUrl + imagePath;
+      console.log('imageUrl: ', imageUrl);
+
+    </script>
   </body>
 </html>
