--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Ecosolution">
     <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
-    <meta property="og:image" content="file:///c/it/ecosolution/public/favicon.svg">
+    <meta property="og:image" content="https://ecosolution-sr.netlify.app/favicon192.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -18,17 +18,5 @@
   </head>
   <body> 
     <div id="root"></div>
-    <script>
-      
-
-      const baseUrl = window.location.origin;
-      console.log('baseUrl: ', baseUrl);
-
-      const imagePath = "%PUBLIC_URL%/favicon192.png"
-      console.log('imagePath: ', imagePath);
-      const imageUrl = baseUrl + imagePath;
-      console.log('imageUrl: ', imageUrl);
-
-    </script>
   </body>
 </html>
