Updated OGP image

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Ecosolution">
     <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
-    <meta property="og:image" content="https://ecosolution-sr.netlify.app/favicon192.png">
+    <meta property="og:image" content="favicon192.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
