--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
     
     <title>Ecosolution</title>
 
+    <meta property="og:url" content="https://ecosolution-sr.netlify.app/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Ecosolution">
     <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
-    <meta property="og:image" content="favicon192.png">
+    <meta property="og:image" content="https://ecosolution-sr.netlify.app/logo2x.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
