--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Ecosolution">
     <meta property="og:description" content="Ecosolution - development and implementation of renewable energy sources.">
-    <meta property="og:image" content="https://ecosolution-sr.netlify.app/logo2x.png">
+    <meta property="og:image" content="https://ecosolution-sr.netlify.app/favicon512.png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:width" content="298">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
